# key-master

./: .gitignore  LICENSE  README.md
.github/: dependabot.yml
python/: pyproject.toml
python/test/: conftest.py  test_handle_links.py
src/python/: google_sheet.py  handle_links.py  pyproject.toml
src/python/test/: conftest.py  test_handle_links.py
src/typescript/: googleDriveUtils.ts  tsconfig.json
typescript/: package.json
