[tool.poetry]
name = "key-master"
version = "0.0.1"
description = "Library for authenticating and connecting to Google Drive"
authors = ["Gustav Rasmussen"]
license = "MIT"
packages = [
    { include = "key_master" },
]
repository = "https://github.com/TheNewThinkTank/key-master"
keywords = ["google-drive", "authentication", "library"]

[tool.poetry.dependencies]
# pydantic = "^2.10.4"
python = "^3.11"
icecream = "^2.1.5"
gspread = "^6.2.1"
google-api-python-client = "^2.177.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.2"
# python-dotenv = "^1.0.1"
sphinx-rtd-theme = "^3.0.2"

[tool.poetry.dev-dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
Sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"
wily = "^1.25"
ruff = "^0.12.7"
mypy = "^1.18.2"

[tool.pytest.ini_options]
pythonpath = "python:python/key_master"

[tool.poetry.extras]
docs = ["sphinx", "sphinx_rtd_theme"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
